# multiclassSkinLesion

./: README.md  kaggle.json
Algos/: ibr.py
dataset/: readme.md
ibr_pypi_module/: README.md  pyproject.toml
ibr_pypi_module/src/ibr_defused_algo/: __init__.py  models.py  tensorflow_models.py
ibr_pypi_module/tests/: test_models.py
