[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibr-defused-algorithms"
version = "0.2.0"
description = "Independent IBR5, IBR6, and Defused IBR algorithms (PyTorch & TensorFlow)"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Abhishek Pandey" }
]
dependencies = [
  "torch>=2.0"
]

[project.optional-dependencies]
tensorflow = [
  "tensorflow>=2.16"
]

dev = [
  "pytest>=7.0"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
